--- a/creJenkins/Dockerfile
+++ b/creJenkins/Dockerfile
@@ -36,7 +36,8 @@ RUN curl -sL https://deb.nodesource.com/setup_10.x | bash - && \
 ## Ubuntu 17 maybe needs: apt remove cmdtest 
 RUN curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - && \
     echo "deb https://dl.yarnpkg.com/debian/ rc main" | tee /etc/apt/sources.list.d/yarn.list 
-RUN apt-get update && apt-get install -y yarn npm && apt-get clean
+RUN apt-get update && apt-get install yarn && apt-get clean
+RUN apt-get update && apt-get install npm && apt-get clean
 
 
 RUN mkdir -p /cre && touch /cre/versions.txt && \ 
