--- a/creUbuntu/Dockerfile
+++ b/creUbuntu/Dockerfile
@@ -22,7 +22,7 @@ RUN \
   apt-get -y upgrade && \
   apt-get install -y build-essential && \
   apt-get install -y software-properties-common && \
-  apt-get install -y byobu curl git htop man unzip vim wget && \
+  apt-get install -y byobu curl git htop logrotate man sudo unzip vim wget && \
   rm -rf /var/lib/apt/lists/*
 
 # Add files.
