--- a/creUbuntu/Dockerfile
+++ b/creUbuntu/Dockerfile
@@ -20,7 +20,8 @@ RUN \
   sed -i 's/# \(.*multiverse$\)/\1/g' /etc/apt/sources.list && \
   apt-get update && \
   apt-get -y upgrade && \
-  apt-get install -y apt-transport-https build-essential software-properties-common locale-gen en_US en_US.UTF-8 && \
+  apt-get install -y apt-transport-https build-essential software-properties-common && \
+  ## locale-gen en_US en_US.UTF-8 && \
   apt-get install -y byobu curl git htop libzip4 libssh2-1 logrotate man pwgen sudo unzip vim wget && \
   rm -rf /var/lib/apt/lists/*
 
