--- a/creUbuntu/Dockerfile
+++ b/creUbuntu/Dockerfile
@@ -20,10 +20,13 @@ RUN \
   sed -i 's/# \(.*multiverse$\)/\1/g' /etc/apt/sources.list && \
   apt-get update && \
   apt-get -y upgrade && \
-  apt-get install -y apt-transport-https build-essential software-properties-common && \
-  ## locale-gen en_US en_US.UTF-8 && \
+  apt-get install -y apt-transport-https build-essential locales software-properties-common && \
   apt-get install -y byobu curl git htop libzip4 libssh2-1 logrotate man pwgen sudo unzip vim wget && \
   rm -rf /var/lib/apt/lists/*
+
+RUN locale-gen en_US en_US.UTF-8 && \ 
+    update-locale LC_ALL=en_US.UTF-8 LANG=en_US.UTF-8
+
 
 # Add files.
 #ADD root/.bashrc /root/.bashrc
